name:                sliverscript
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sliverscript
license:             BSD3
license-file:        LICENSE
author:              Alan Tay
-- maintainer:          example@example.com
copyright:           2018 Alan Tay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sliverscript
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       cmdargs
